tests/parser/bad/exps/exp_t-let-id-colon-tid-eq-string-with.scilexp
let a : (Bool) = True im a
